[metadata]
name = blogit
description = A quick and simple static site generator based on markdown and jinja2
description-file = README.md
author = Oz N Tiram
author-email = nahumoz@gmail.com
license = GPL-3.0-or-later
home-page = https://github.com/oz123/blogit
project_urls =
    Bug Tracker = https://github.com/oz123/blogit/issues
    Source Code = https://github.com/oz123/blogit
    Documentation = https://github.com/oz123/blogit/blob/dev/README.md
classifier =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[entry_points]
console_scripts =
    blogit = blogit.blogit:main

[aliases]
test = pytest

[tool:pytest]
addopts = -vv tests

[build_manpage]
output = blogit.1
parser = blogit.blogit:get_parser
